--- a/window.ui
+++ b/window.ui
@@ -157,6 +157,8 @@
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionLoad"/>
+    <addaction name="actionSave"/>
    </widget>
    <widget class="QMenu" name="menuData">
     <property name="title">
@@ -164,7 +166,6 @@
     </property>
     <addaction name="actionAdd_Row"/>
     <addaction name="actionAdd_Col"/>
-    <addaction name="actionEdit_Column_Types"/>
     <addaction name="actionClear"/>
     <addaction name="actionDelete_Row"/>
     <addaction name="actionDelete_Col"/>
@@ -201,7 +202,7 @@
   </action>
   <action name="actionPopulate_from_set">
    <property name="text">
-    <string>Populate from set</string>
+    <string>(DEBUG)Populate</string>
    </property>
   </action>
   <action name="actionDEBUG">
@@ -212,6 +213,16 @@
   <action name="actionEdit_Column_Types">
    <property name="text">
     <string>Edit Column Types</string>
+   </property>
+  </action>
+  <action name="actionLoad">
+   <property name="text">
+    <string>Load</string>
+   </property>
+  </action>
+  <action name="actionSave">
+   <property name="text">
+    <string>Save</string>
    </property>
   </action>
  </widget>
